// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildList renders using ajax-loaded object data 1`] = `
<FetchContextProvider>
  <ChildList
    pid="foo:123"
  >
    <ul>
      <li
        key="foo:123childfoo:124"
      >
        <Link
          href="/edit/object/foo:124"
        >
          <a
            href="/edit/object/foo:124"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            hello [foo:124]
          </a>
        </Link>
      </li>
    </ul>
  </ChildList>
</FetchContextProvider>
`;

exports[`ChildList renders using ajax-loaded root data 1`] = `
<FetchContextProvider>
  <ChildList>
    <ul>
      <li
        key="rootchildfoo:124"
      >
        <Link
          href="/edit/object/foo:124"
        >
          <a
            href="/edit/object/foo:124"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            hello [foo:124]
          </a>
        </Link>
      </li>
    </ul>
  </ChildList>
</FetchContextProvider>
`;
